Crash in WK1 when clicking on a PDF inside an iframe https://bugs.webkit.org/show_bug.cgi?id=148585 -and corresponding- rdar://problem/22165194

Reviewed by Tim Horton.

Only handle WebHTMLViews.
* WebView/WebImmediateActionController.mm:
(-[WebImmediateActionController immediateActionRecognizerWillPrepare:]):
(-[WebImmediateActionController immediateActionRecognizerDidCancelAnimation:]):



Canonical link: https://commits.webkit.org/166700@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189122 268f45cc-cd09-0410-ab3c-d52691b4dbfc